# PedalAI

./: .gitignore  LICENSE  README.md  agents.py  pyproject.toml  requirements.txt
api/: agents.py  main.py
api/chat/: chat.py
api/files/: down.py  undo.py  up.py
api/session/: __init__.py  session.py  track.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: home.tsx  waveform.tsx
session/: session.py
