[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "api"

[tool.setuptools]
packages = ["pedalai"] 

[project]
name = "pedalai"
version = "0.0.1"
authors = [
    { name = "Harmonic hackers", email = ""}
]
readme = "README.md"
description = "An AI agent for audio editing"
requires-python = "~=3.10"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "black~=23.11",
    "isort~=5.13",
    "pytest~=7.4",
    "pytest-mock~=3.12",
]

[tool.black]
line-length = 79
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
